Bug 4429 - Disassembler doesn't support PC relative in Intel mode
Summary: Disassembler doesn't support PC relative in Intel mode
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.18
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-04-26 03:56 UTC by H.J. Lu
Modified: 2007-04-26 18:17 UTC (History)
1 user (show)

See Also:
Host:
Target: x86_64-unknown-linux-gnu
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2007-04-26 03:56:09 UTC
[hjl@gnu-2 tmp]$ cat x.s
        .intel_syntax noprefix
        mov eax, [rip] + 2
[hjl@gnu-2 tmp]$ gcc -c x.s
[hjl@gnu-2 tmp]$ objdump -d x.o

x.o:     file format elf64-x86-64

Disassembly of section .text:

0000000000000000 <.text>:
   0:   8b 05 02 00 00 00       mov    2(%rip),%eax        # 0x8
[hjl@gnu-2 tmp]$ objdump -d -Mintel x.o

x.o:     file format elf64-x86-64

Disassembly of section .text:

0000000000000000 <.text>:
   0:   8b 05 02 00 00 00       mov    eax,DWORD PTR ds:0x2
[hjl@gnu-2 tmp]$
Comment 1 H.J. Lu 2007-04-26 19:17:52 UTC
Fixed by

http://sourceware.org/ml/binutils/2007-04/msg00353.html